test/test_suite/errors/error_union.c3
module foo;

fault X, Y, Z;

fn void main()
{
    anyfault foo;
}